--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
+    "fullcalendar": "^6.1.8",
     "next": "13.4.4",
     "next-sanity": "^4.3.3",
     "next-sanity-image": "^6.0.0",
@@ -40,6 +41,7 @@
     "react-social-icons": "^5.15.0",
     "sanity": "^3.11.5",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuidv4": "^6.2.13"
   }
 }
